# quizmd-tui-client

./: LICENSE  README.md  pyproject.toml
samples/: intro-to-space.quiz.md
src/quizmd_tui/: __init__.py  app.py  cli.py  github.py
