[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizmd-tui"
version = "0.1.0"
description = "QuizMD TUI client — play quizzes in your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{ name = "learnspec" }]
keywords = ["quizmd", "quiz", "tui", "terminal", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "pylearnspec>=0.1.0",
    "rich>=13.0.0",
]

[project.scripts]
quizmd = "quizmd_tui.cli:main"

[project.urls]
Homepage = "https://github.com/learnspec/quizmd-tui-client"
Repository = "https://github.com/learnspec/quizmd-tui-client"

[tool.setuptools.packages.find]
where = ["src"]
